added code to obtain frequencies

--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOVwFqNimqt//m1Grqmuusp",
+      "authorship_tag": "ABX9TyNHO9AifPd/8XI6x0sG0vbo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,10 +53,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "ggNcnk34d2O4",
-        "outputId": "46404b0a-539f-4108-cf90-53f8b62dc2d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "46404b0a-539f-4108-cf90-53f8b62dc2d1"
       },
       "outputs": [
         {
@@ -91,10 +91,10 @@
       ],
       "metadata": {
         "id": "iYlJS26seDTB",
-        "outputId": "83c5349f-b649-4d9f-b956-d4406104a028",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "83c5349f-b649-4d9f-b956-d4406104a028"
       },
       "execution_count": 2,
       "outputs": [
@@ -228,10 +228,10 @@
       ],
       "metadata": {
         "id": "WZM8Ds6neRVU",
-        "outputId": "ce536951-2dff-4fb1-87a1-0723357cfd0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ce536951-2dff-4fb1-87a1-0723357cfd0f"
       },
       "execution_count": 5,
       "outputs": [
@@ -268,10 +268,10 @@
       ],
       "metadata": {
         "id": "faY0v_dpehPS",
-        "outputId": "2fa2fbd7-feb8-4a80-924b-f9180956c258",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2fa2fbd7-feb8-4a80-924b-f9180956c258"
       },
       "execution_count": 17,
       "outputs": [
@@ -320,10 +320,10 @@
       ],
       "metadata": {
         "id": "f3aFPCCZelEd",
-        "outputId": "65187091-a09f-435b-bd2b-4516d1f269d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "65187091-a09f-435b-bd2b-4516d1f269d8"
       },
       "execution_count": 7,
       "outputs": [
@@ -446,12 +446,12 @@
         "data_file"
       ],
       "metadata": {
-        "id": "_xRq3eLvzLEN",
-        "outputId": "bc5aa491-cfeb-46d7-c3d4-50f58c640f50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 731
-        }
+        },
+        "id": "_xRq3eLvzLEN",
+        "outputId": "bc5aa491-cfeb-46d7-c3d4-50f58c640f50"
       },
       "execution_count": 43,
       "outputs": [
@@ -806,11 +806,11 @@
         "float((1 - scipy.spatial.distance.cdist(vec1, vec2, 'cosine'))[0])      "
       ],
       "metadata": {
-        "id": "meH-bA54zoGs",
-        "outputId": "7f52932e-caf5-4f27-c2c9-a4917af65ebf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "meH-bA54zoGs",
+        "outputId": "7f52932e-caf5-4f27-c2c9-a4917af65ebf"
       },
       "execution_count": 46,
       "outputs": [
@@ -846,11 +846,11 @@
         "cosine_similarity(\"apple\", \"apple\")"
       ],
       "metadata": {
-        "id": "atOFXEEaBiU_",
-        "outputId": "f9c4928e-0603-47e3-94a8-6a31f98a53d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "atOFXEEaBiU_",
+        "outputId": "f9c4928e-0603-47e3-94a8-6a31f98a53d2"
       },
       "execution_count": 49,
       "outputs": [
@@ -889,11 +889,11 @@
         "find_closest(\"apple\")"
       ],
       "metadata": {
-        "id": "2fTzhwMwBqz0",
-        "outputId": "51933d4c-6101-4c4c-89cd-16679419e1d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2fTzhwMwBqz0",
+        "outputId": "51933d4c-6101-4c4c-89cd-16679419e1d1"
       },
       "execution_count": 61,
       "outputs": [
@@ -943,11 +943,11 @@
         "len(simlabels)"
       ],
       "metadata": {
-        "id": "T0_hYk_MDaEA",
-        "outputId": "122b446e-a24c-401d-d72d-9727b7b0f96a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "T0_hYk_MDaEA",
+        "outputId": "122b446e-a24c-401d-d72d-9727b7b0f96a"
       },
       "execution_count": 64,
       "outputs": [
@@ -969,11 +969,11 @@
         "'blue jay' in list(vocab.vocab_word)"
       ],
       "metadata": {
-        "id": "0xEWStcxI4jQ",
-        "outputId": "21d35848-afaa-41ff-fe72-e15dba1d2888",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0xEWStcxI4jQ",
+        "outputId": "21d35848-afaa-41ff-fe72-e15dba1d2888"
       },
       "execution_count": 71,
       "outputs": [
@@ -1037,10 +1037,10 @@
       ],
       "metadata": {
         "id": "xvFN6weVe-vq",
-        "outputId": "2fd09595-18d0-4bc8-c64e-73cc27448c58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2fd09595-18d0-4bc8-c64e-73cc27448c58"
       },
       "execution_count": 81,
       "outputs": [
@@ -1091,10 +1091,10 @@
       ],
       "metadata": {
         "id": "b2HouuHsfK4w",
-        "outputId": "d64d9ed9-0dc3-432b-db1c-16359b7e1dc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d64d9ed9-0dc3-432b-db1c-16359b7e1dc6"
       },
       "execution_count": 86,
       "outputs": [
@@ -1119,30 +1119,30 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "normalized_sim(wordbreak(\"aardvark\")[0], wordbreak(\"Spinosaurus\")[0])"
+        "## get frequencies"
       ],
       "metadata": {
-        "id": "tBbzQO9DLTZK",
-        "outputId": "03fe8533-52f2-408d-a675-df3eeb820067",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "mNgomwoNMI2R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frequencies = pd.read_csv(parentfolder+ f'frequencies.csv', header=None)\n",
+        "frequencies.columns = [\"word\", \"freq\"]\n",
+        "# simlabels = pd.read_csv(parentfolder+'word2vec_sim_labels.csv', header=None).values.reshape(-1,).tolist() \n",
+        "freq_small = pd.DataFrame([frequencies.loc[list(frequencies.word).index(lab)].freq for lab in simlabels])\n",
+        "freq_small['word'] = simlabels\n",
+        "## keep only those that are part of simlabels\n",
+        "freq_small.to_csv(parentfolder + 'word2vec_frequencies.csv', index=False, header=False)  "
+      ],
+      "metadata": {
+        "id": "pIkuXkoLMKkO"
       },
-      "execution_count": 85,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.09999999999999998"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 85
-        }
-      ]
+      "execution_count": 102,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1177,7 +1177,7 @@
         "\n",
         "    # Similarity labels\n",
         "    simlab = []\n",
-        "    ofile = open(corpus_dir + 'similaritylabels.csv','r')#TODO:\n",
+        "    ofile = open(corpus_dir + 'word2vec_sim_labels.csv','r')#TODO:\n",
         "    for line in ofile:\n",
         "        labs = line.split()\n",
         "        for lab in labs:\n",
@@ -1186,7 +1186,7 @@
         "\n",
         "    # Similarity values\n",
         "    simval = np.zeros((len(simlab), len(simlab)))\n",
-        "    ofile = open(corpus_dir + 'similaritymatrix.csv', 'r')#TODO:\n",
+        "    ofile = open(corpus_dir + 'word2vec_sim_matrix.csv', 'r')#TODO:\n",
         "    j=0\n",
         "    for line in ofile:\n",
         "        line = re.sub(',\\n', '', line)\n",
@@ -1229,13 +1229,13 @@
         "\n",
         "    freqlab = []\n",
         "    freqval = []\n",
-        "    ofile = open(corpus_dir + 'frequencies.csv', 'r') #TODO:\n",
+        "    ofile = open(corpus_dir + 'word2vec_frequencies.csv', 'r') #TODO:\n",
         "    for line in ofile:\n",
         "        line = re.sub('\\n', '', line)\n",
         "        freqs=line.split(',')\n",
-        "        freqlab.append(freqs[0])\n",
+        "        freqlab.append(freqs[1])\n",
         "        ## append log of frequency if using psyrev\n",
-        "        freqval.append(np.log(float(freqs[1])))\n",
+        "        freqval.append(np.log(float(freqs[0])))\n",
         "        #freqval.append(float(freqs[1]))\n",
         "    ofile.close()\n",
         "    freqval=np.array(freqval)\n",
