ran foraging models

--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNHO9AifPd/8XI6x0sG0vbo",
+      "authorship_tag": "ABX9TyMjePpX4lHskaLduorL0em5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1154,6 +1154,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "For these models, the behavioral data is read in as .txt files separated by a space"
+      ],
+      "metadata": {
+        "id": "kNsBt3GyOiQQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
@@ -1177,7 +1186,7 @@
         "\n",
         "    # Similarity labels\n",
         "    simlab = []\n",
-        "    ofile = open(corpus_dir + 'word2vec_sim_labels.csv','r')#TODO:\n",
+        "    ofile = open(parentfolder + 'word2vec_sim_labels.csv','r')#TODO:\n",
         "    for line in ofile:\n",
         "        labs = line.split()\n",
         "        for lab in labs:\n",
@@ -1186,7 +1195,7 @@
         "\n",
         "    # Similarity values\n",
         "    simval = np.zeros((len(simlab), len(simlab)))\n",
-        "    ofile = open(corpus_dir + 'word2vec_sim_matrix.csv', 'r')#TODO:\n",
+        "    ofile = open(parentfolder + 'word2vec_sim_matrix.csv', 'r')#TODO:\n",
         "    j=0\n",
         "    for line in ofile:\n",
         "        line = re.sub(',\\n', '', line)\n",
@@ -1206,7 +1215,7 @@
         "\n",
         "    ## PHONEMIC SIMILARTY VALUES ##\n",
         "    phonval = np.zeros((len(simlab), len(simlab)))\n",
-        "    ofile = open(corpus_dir + 'simlabels_phon_matrix.csv', 'r')#TODO:\n",
+        "    ofile = open(parentfolder + 'simlabels_phon_matrix.csv', 'r')#TODO:\n",
         "    j=0\n",
         "    for line in ofile:\n",
         "        line = re.sub(',\\n', '', line)\n",
@@ -1229,7 +1238,7 @@
         "\n",
         "    freqlab = []\n",
         "    freqval = []\n",
-        "    ofile = open(corpus_dir + 'word2vec_frequencies.csv', 'r') #TODO:\n",
+        "    ofile = open(parentfolder + 'word2vec_frequencies.csv', 'r') #TODO:\n",
         "    for line in ofile:\n",
         "        line = re.sub('\\n', '', line)\n",
         "        freqs=line.split(',')\n",
@@ -1332,13 +1341,13 @@
         "    print(\"Fits Complete.\")\n",
         "\n",
         "    # create results directory if it doesn't exist yet\n",
-        "    if not os.path.exists(results_dir):\n",
-        "        os.makedirs(results_dir)\n",
+        "    if not os.path.exists(parentfolder):\n",
+        "        os.makedirs(parentfolder)\n",
         "\n",
         "    # # Output data entries with corresponding metrics for visualization in R\n",
         "    print(full_entdf)\n",
         "    full_entdf = full_entdf.reset_index(drop=True)\n",
-        "    full_entdf.to_csv(results_dir  + 'nancy-fullmetrics.csv', index=False, header=True)\n",
+        "    full_entdf.to_csv(parentfolder  + 'nancy-fullmetrics.csv', index=False, header=True)\n",
         "\n",
         "    # # Output parameter & model fits\n",
         "    full_fitlist = pd.DataFrame(full_fitlist)\n",
@@ -1359,10 +1368,10 @@
         "                            ]\n",
         "\n",
         "    #print(\"full_fitlist:\",full_fitlist)\n",
-        "    full_fitlist.to_csv(results_dir  + 'nancy-fullfits.csv', index=False, header=True)\n",
+        "    full_fitlist.to_csv(parentfolder  + 'nancy-fullfits.csv', index=False, header=True)\n",
         "\n",
         "    print(full_fitlist.head())\n",
-        "    print(\"Results saved to '\" + results_dir + \"'.\")\n",
+        "    print(\"Results saved to '\" + parentfolder + \"'.\")\n",
         "\n",
         "class forage:\n",
         "\n",
@@ -1371,7 +1380,7 @@
         "        import re\n",
         "        # load similarity labels\n",
         "        simlab = []\n",
-        "        ofile = open(corpus_dir + 'similaritylabels.csv','r')\n",
+        "        ofile = open(parentfolder + 'word2vec_sim_labels.csv','r')\n",
         "        for line in ofile:\n",
         "            labs = line.split()\n",
         "            for lab in labs:\n",
@@ -1380,7 +1389,7 @@
         "\n",
         "        ### LOAD CORRECTIONS ###\n",
         "        # This is a look-up list that maps incorrect words onto accepted words that are in the database\n",
-        "        corrections = pd.read_csv(corpus_dir + 'corrections.txt', header=None, delimiter='\\t')\n",
+        "        corrections = pd.read_csv(parentfolder + 'corrections.txt', header=None, delimiter='\\t')\n",
         "        corrections = corrections.set_index(corrections[0].values)\n",
         "        corrections.columns = ['_from','_to']\n",
         "\n",
@@ -1398,9 +1407,9 @@
         "                # If this entry is plural, correct to the singular verion\n",
         "                print(f\"found the entry {ent[0:len(ent)-1]} in simlab\")\n",
         "                newlist.append(ent[0:len(ent)-1])\n",
-        "            elif ent in corrections._from:\n",
-        "                # If this entry is correctable, correct it\n",
-        "                newlist.append(corrections.loc[ent]._to)\n",
+        "            # elif ent in corrections._from:\n",
+        "            #     # If this entry is correctable, correct it\n",
+        "            #     newlist.append(corrections.loc[ent]._to)\n",
         "            else:\n",
         "                # If this entry is not found in either list, mark for removal and warn user.\n",
         "                newlist.append('NA')\n",
@@ -1746,7 +1755,7 @@
       "metadata": {
         "id": "lP1sdQE5fR2L"
       },
-      "execution_count": null,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -1761,11 +1770,203 @@
     {
       "cell_type": "code",
       "source": [
-        "datapath = '/content/drive/My Drive/IU-Abhilasha-Mike/Fluency/optimal-foraging-model/data/corpus/nancy-animals.txt'\n",
-        "modelFits(datapath, delimiter = \"\\t\")"
+        "datapath = parentfolder+'data-psyrev.txt'\n",
+        "modelFits(datapath, delimiter = \" \")"
       ],
       "metadata": {
-        "id": "hV8fHr10fS3Z"
+        "id": "hV8fHr10fS3Z",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "963007ec-9ede-4b39-f4b6-ecdb12f11788"
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "found the entry gull in simlab\n",
+            "found the entry lizard in simlab\n",
+            "The following items were not found in the database, and were removed: [248 entries removed] \n",
+            "\n",
+            "['akita', 'antlion', 'axolotl', 'bacterium', 'bengaltiger', 'billygoat', 'blackbear', 'blackmamba', 'blacktaileddeer', 'blackwidow', 'blowfish', 'bluefootedbooby', 'bluejay', 'bluewhale', 'boaconstrictor', 'brineshrimp', 'bronco', 'brownbear', 'cattle', 'dalmation', 'duckbill', 'gardensnake', 'goldenmarmot', 'greatdane', 'greatwhiteshark', 'guineapig', 'hammerheadshark', 'humpbackwhale', 'jackrabbit', 'junebug', 'killerwhale', 'kodiakbear', 'komododragon', 'labradorretriever', 'liger', 'makoshark', 'malamute', 'mantaray', 'mountainbear', 'mountaingoat', 'mountainlion', 'muledeer', 'okapi', 'pembrokewelshcorgi', 'pike', 'pillbug', 'polarbear', 'potbelliedpig', 'prairiedog', 'prayingmantis', 'puggle', 'redrumpedagouti', 'rhinoceros', 'sanddollar', 'sealion', 'seamonkey', 'shihtzu', 'siamesecat', 'siberianhusky', 'snowfox', 'snowleopard', 'snowlion', 'snowmonkey', 'spidermonkey', 'stickinsect', 'sugarglider', 'unicorn', 'watersnake', 'whaleshark', 'whitetaileddeer', 'wolverine', 'woollymammoth']\n",
+            "SUBJECT 1/141 51\n",
+            "SUBJECT 2/141 575\n",
+            "SUBJECT 3/141 576\n",
+            "SUBJECT 4/141 577\n",
+            "SUBJECT 5/141 578\n",
+            "SUBJECT 6/141 579\n",
+            "SUBJECT 7/141 580\n",
+            "SUBJECT 8/141 581\n",
+            "SUBJECT 9/141 582\n",
+            "SUBJECT 10/141 71\n",
+            "SUBJECT 11/141 583\n",
+            "SUBJECT 12/141 584\n",
+            "SUBJECT 13/141 585\n",
+            "SUBJECT 14/141 586\n",
+            "SUBJECT 15/141 587\n",
+            "SUBJECT 16/141 588\n",
+            "SUBJECT 17/141 589\n",
+            "SUBJECT 18/141 590\n",
+            "SUBJECT 19/141 591\n",
+            "SUBJECT 20/141 592\n",
+            "SUBJECT 21/141 593\n",
+            "SUBJECT 22/141 594\n",
+            "SUBJECT 23/141 595\n",
+            "SUBJECT 24/141 596\n",
+            "SUBJECT 25/141 597\n",
+            "SUBJECT 26/141 598\n",
+            "SUBJECT 27/141 677\n",
+            "SUBJECT 28/141 678\n",
+            "SUBJECT 29/141 679\n",
+            "SUBJECT 30/141 680\n",
+            "SUBJECT 31/141 681\n",
+            "SUBJECT 32/141 682\n",
+            "SUBJECT 33/141 683\n",
+            "SUBJECT 34/141 684\n",
+            "SUBJECT 35/141 686\n",
+            "SUBJECT 36/141 687\n",
+            "SUBJECT 37/141 688\n",
+            "SUBJECT 38/141 689\n",
+            "SUBJECT 39/141 690\n",
+            "SUBJECT 40/141 691\n",
+            "SUBJECT 41/141 692\n",
+            "SUBJECT 42/141 693\n",
+            "SUBJECT 43/141 694\n",
+            "SUBJECT 44/141 695\n",
+            "SUBJECT 45/141 696\n",
+            "SUBJECT 46/141 697\n",
+            "SUBJECT 47/141 698\n",
+            "SUBJECT 48/141 198\n",
+            "SUBJECT 49/141 199\n",
+            "SUBJECT 50/141 779\n",
+            "SUBJECT 51/141 780\n",
+            "SUBJECT 52/141 781\n",
+            "SUBJECT 53/141 782\n",
+            "SUBJECT 54/141 783\n",
+            "SUBJECT 55/141 784\n",
+            "SUBJECT 56/141 785\n",
+            "SUBJECT 57/141 786\n",
+            "SUBJECT 58/141 787\n",
+            "SUBJECT 59/141 788\n",
+            "SUBJECT 60/141 789\n",
+            "SUBJECT 61/141 790\n",
+            "SUBJECT 62/141 791\n",
+            "SUBJECT 63/141 792\n",
+            "SUBJECT 64/141 793\n",
+            "SUBJECT 65/141 794\n",
+            "SUBJECT 66/141 795\n",
+            "SUBJECT 67/141 796\n",
+            "SUBJECT 68/141 285\n",
+            "SUBJECT 69/141 286\n",
+            "SUBJECT 70/141 287\n",
+            "SUBJECT 71/141 288\n",
+            "SUBJECT 72/141 289\n",
+            "SUBJECT 73/141 290\n",
+            "SUBJECT 74/141 291\n",
+            "SUBJECT 75/141 292\n",
+            "SUBJECT 76/141 293\n",
+            "SUBJECT 77/141 294\n",
+            "SUBJECT 78/141 295\n",
+            "SUBJECT 79/141 296\n",
+            "SUBJECT 80/141 297\n",
+            "SUBJECT 81/141 298\n",
+            "SUBJECT 82/141 379\n",
+            "SUBJECT 83/141 380\n",
+            "SUBJECT 84/141 381\n",
+            "SUBJECT 85/141 382\n",
+            "SUBJECT 86/141 383\n",
+            "SUBJECT 87/141 384\n",
+            "SUBJECT 88/141 385\n",
+            "SUBJECT 89/141 386\n",
+            "SUBJECT 90/141 387\n",
+            "SUBJECT 91/141 388\n",
+            "SUBJECT 92/141 389\n",
+            "SUBJECT 93/141 390\n",
+            "SUBJECT 94/141 391\n",
+            "SUBJECT 95/141 392\n",
+            "SUBJECT 96/141 393\n",
+            "SUBJECT 97/141 394\n",
+            "SUBJECT 98/141 395\n",
+            "SUBJECT 99/141 396\n",
+            "SUBJECT 100/141 397\n",
+            "SUBJECT 101/141 398\n",
+            "SUBJECT 102/141 893\n",
+            "SUBJECT 103/141 994\n",
+            "SUBJECT 104/141 995\n",
+            "SUBJECT 105/141 996\n",
+            "SUBJECT 106/141 1098\n",
+            "SUBJECT 107/141 997\n",
+            "SUBJECT 108/141 1099\n",
+            "SUBJECT 109/141 896\n",
+            "SUBJECT 110/141 998\n",
+            "SUBJECT 111/141 897\n",
+            "SUBJECT 112/141 999\n",
+            "SUBJECT 113/141 898\n",
+            "SUBJECT 114/141 797\n",
+            "SUBJECT 115/141 899\n",
+            "SUBJECT 116/141 798\n",
+            "SUBJECT 117/141 474\n",
+            "SUBJECT 118/141 475\n",
+            "SUBJECT 119/141 476\n",
+            "SUBJECT 120/141 477\n",
+            "SUBJECT 121/141 478\n",
+            "SUBJECT 122/141 479\n",
+            "SUBJECT 123/141 480\n",
+            "SUBJECT 124/141 481\n",
+            "SUBJECT 125/141 482\n",
+            "SUBJECT 126/141 483\n",
+            "SUBJECT 127/141 484\n",
+            "SUBJECT 128/141 485\n",
+            "SUBJECT 129/141 486\n",
+            "SUBJECT 130/141 487\n",
+            "SUBJECT 131/141 488\n",
+            "SUBJECT 132/141 489\n",
+            "SUBJECT 133/141 490\n",
+            "SUBJECT 134/141 491\n",
+            "SUBJECT 135/141 492\n",
+            "SUBJECT 136/141 493\n",
+            "SUBJECT 137/141 494\n",
+            "SUBJECT 138/141 495\n",
+            "SUBJECT 139/141 496\n",
+            "SUBJECT 140/141 497\n",
+            "SUBJECT 141/141 498\n",
+            "Fits Complete.\n",
+            "    sid  time        ent       freq       sim      phon  switch\n",
+            "0    51     0        cat  11.476894  0.000000  0.000000       0\n",
+            "1    51     1        dog  12.375790  0.202481  0.000100       0\n",
+            "2    51     2      mouse  11.151769  0.082490  0.000100       0\n",
+            "3    51     3        rat  10.045291  0.046041  0.000100       1\n",
+            "4    51     4    giraffe   8.552946  0.158130  0.250000       0\n",
+            "..  ...   ...        ...        ...       ...       ...     ...\n",
+            "20  498  2236    raccoon   8.116716  0.078891  0.000100       1\n",
+            "21  498  2237       deer  10.546578  0.343408  0.000100       0\n",
+            "22  498  2238  tarantula   7.076654  0.151188  0.111111       1\n",
+            "23  498  2239   squirrel   8.850661  0.157418  0.111111       0\n",
+            "24  498  2240    hamster   7.643962  0.105035  0.000100       0\n",
+            "\n",
+            "[4831 rows x 7 columns]\n",
+            "   subject  ...  errors_pswitchonlydynamicjack_random\n",
+            "0       51  ...                            211.658026\n",
+            "1      575  ...                            120.947444\n",
+            "2      576  ...                            302.368609\n",
+            "3      577  ...                            284.226492\n",
+            "4      578  ...                            229.800143\n",
+            "\n",
+            "[5 rows x 44 columns]\n",
+            "Results saved to '/content/drive/My Drive/IU-Abhilasha-Mike/Fluency/sem-phon/fluency_cogsci2022/'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "AAO0grZLPiSF"
       },
       "execution_count": null,
       "outputs": []
