created phonology-only model

--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyM5oVD7VeaxU/ifa0shzeV9",
+      "authorship_tag": "ABX9TyMa/1WAGUQKasZCoF5Utu/r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ggNcnk34d2O4",
         "colab": {
@@ -96,7 +96,7 @@
         },
         "outputId": "da5a23a7-9f70-4772-fbcd-2afc82f82f36"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "7f1RA_0MeKWo"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
         },
         "outputId": "7396cc95-bab9-46d3-fbf8-4d759e1bad43"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +246,7 @@
         },
         "outputId": "bcfaf5f1-0a84-4473-8aad-9eff269c5a2c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
         },
         "outputId": "7f4f682d-6242-410c-8bcc-b09b88ebe37d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,7 +338,7 @@
         },
         "outputId": "9a23e91d-9fe1-4b3c-cb06-05c93a69205d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,7 +453,7 @@
       "metadata": {
         "id": "WqZLn2_Beljf"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +469,7 @@
         "id": "_xRq3eLvzLEN",
         "outputId": "c665c21f-ee1a-4769-e282-aaf4d1d8b643"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -817,7 +817,7 @@
         "id": "meH-bA54zoGs",
         "outputId": "3dcb93a2-f98c-43ba-dd5d-e3a9da868e7f"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -842,7 +842,7 @@
       "metadata": {
         "id": "ykEurQ1NBVc1"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -857,7 +857,7 @@
         "id": "atOFXEEaBiU_",
         "outputId": "267e5ff8-6a32-4f1e-92f5-1b99a1d14334"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -885,7 +885,7 @@
       "metadata": {
         "id": "sZz2-AHO0cCy"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -900,7 +900,7 @@
         "id": "2fTzhwMwBqz0",
         "outputId": "51e3c7b8-28af-4b78-f243-c62901efd728"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -954,7 +954,7 @@
         "id": "T0_hYk_MDaEA",
         "outputId": "41a8e5d3-3726-4d73-98eb-1d4a0ff38b2d"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1021,7 +1021,7 @@
         },
         "outputId": "f1e8b5f0-8769-4024-89ab-9de71a09b310"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1075,7 +1075,7 @@
         },
         "outputId": "0db59faf-76bb-4f32-87ac-eb96cc90d306"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1109,7 +1109,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1145,7 @@
         },
         "outputId": "9e0c5ffe-945b-4a8c-e5e7-04b476379f27"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1611,6 +1611,22 @@
         "                denrat = sum(pow(simh[k],beta[1]))\n",
         "            ct += -np.log(numrat/denrat)\n",
         "        return ct\n",
+        "      \n",
+        "    def model_static_phononly(beta, freql, freqh, siml, simh, phonl, phonh):\n",
+        "      ## here we use phonology as a \"local\" cue with semantics\n",
+        "        import numpy as np\n",
+        "        ct = 0\n",
+        "        for k in range(0, len(freql)):\n",
+        "            if k == 0 :\n",
+        "            # P of item based on frequency alone (freq of this item / freq of all items)\n",
+        "                numrat = pow(freql[k],beta[0])\n",
+        "                denrat = sum(pow(freqh[k],beta[0]))\n",
+        "            else:\n",
+        "            # P of item based on combined frequency and similarity\n",
+        "                numrat = pow(phonl[k],beta[2])\n",
+        "                denrat = sum(pow(phonh[k],beta[2]))\n",
+        "            ct += -np.log(numrat/denrat)\n",
+        "        return ct\n",
         "\n",
         "    def getfits( freq_l, freq_h, sim_l, sim_h, phon_l, phon_h ):\n",
         "        import numpy as np\n",
@@ -1767,7 +1783,7 @@
       "metadata": {
         "id": "lP1sdQE5fR2L"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1792,7 +1808,7 @@
         },
         "outputId": "ef3e5f36-8128-4e21-9294-3c440e923f47"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
