fixed static phon-only model

--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyO+jQ/mxvPhwQoSy2IRJiQR",
+      "authorship_tag": "ABX9TyMUw3SIWVgSTQywp3PaWLA/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -496,12 +496,12 @@
         "precomputed_data"
       ],
       "metadata": {
-        "id": "YfQRnFs8ONhg",
-        "outputId": "4a62f149-c456-48f5-fa73-06e7ad967b4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 852
-        }
+        },
+        "id": "YfQRnFs8ONhg",
+        "outputId": "4a62f149-c456-48f5-fa73-06e7ad967b4d"
       },
       "execution_count": 29,
       "outputs": [
@@ -1672,7 +1672,7 @@
         "            ct += -np.log(numrat/denrat)\n",
         "        return ct\n",
         "      \n",
-        "    def model_static_phononly(beta, freql, freqh, siml, simh, phonl, phonh):\n",
+        "    def model_static_phononly(beta, freql, freqh, phonl, phonh):\n",
         "      ## here we use phonology as a \"local\" cue with semantics\n",
         "        import numpy as np\n",
         "        ct = 0\n",
@@ -1683,8 +1683,8 @@
         "                denrat = sum(pow(freqh[k],beta[0]))\n",
         "            else:\n",
         "            # P of item based on combined frequency and similarity\n",
-        "                numrat = pow(phonl[k],beta[2])\n",
-        "                denrat = sum(pow(phonh[k],beta[2]))\n",
+        "                numrat = pow(phonl[k],beta[1])\n",
+        "                denrat = sum(pow(phonh[k],beta[1]))\n",
         "            ct += -np.log(numrat/denrat)\n",
         "        return ct\n",
         "\n",
@@ -1820,6 +1820,19 @@
         "        # 3.) For comparison, determine model fit (errors) without parameter fits\n",
         "        random_fit_pswitchonlydynamicjack = forage.model_dynamic_pswitchonly_jack([0, 0, 0], freq_l, freq_h, sim_l, sim_h, phon_l, phon_h)\n",
         "      \n",
+        "      # STATIC PHON ONLY MODEL (switches dynamically between cues, phonology is a GLOBAL cue with frequency)\n",
+        "\n",
+        "        # 1.) Optimize model parameters\n",
+        "        v = fmin(forage.model_static_phononly, [r1, r3], args=(freq_l, freq_h, phon_l, phon_h), ftol = 0.001, disp=False)\n",
+        "        beta_static_phononly_freq = float(v[0]) # Optimized weight for frequency cue\n",
+        "        beta_static_phononly_phonemic = float(v[1]) # Optimized weight for phonemic cue\n",
+        "\n",
+        "        # 2.) Determine model fit (errors) at optimal parameters: will return total -LL\n",
+        "        optimal_fit_phononlystatic = forage.model_static_phononly([beta_static_phononly_freq, beta_static_phononly_phonemic], freq_l, freq_h, phon_l, phon_h)\n",
+        "\n",
+        "        # 3.) For comparison, determine model fit (errors) without parameter fits\n",
+        "        random_fit_phononlystatic = forage.model_static_phononly([0, 0], freq_l, freq_h, phon_l, phon_h)\n",
+        "      \n",
         "      \n",
         "\n",
         "        results = [ beta_static_freq, beta_static_semantic, float(optimal_fit_static), float(random_fit_static),\n",
@@ -1834,7 +1847,9 @@
         "                   beta_dynamic_plocaljack_freq, beta_dynamic_plocaljack_semantic, beta_dynamic_plocaljack_phonemic, float(optimal_fit_plocaldynamicjack), float(random_fit_plocaldynamicjack),\n",
         "                   beta_dynamic_pglobaljack_freq, beta_dynamic_pglobaljack_semantic, beta_dynamic_pglobaljack_phonemic, float(optimal_fit_pglobaldynamicjack), float(random_fit_pglobaldynamicjack),\n",
         "\n",
-        "                   beta_dynamic_pswitchonlyjack_freq, beta_dynamic_pswitchonlyjack_semantic, beta_dynamic_pswitchonlyjack_phonemic, float(optimal_fit_pswitchonlydynamicjack), float(random_fit_pswitchonlydynamicjack)\n",
+        "                   beta_dynamic_pswitchonlyjack_freq, beta_dynamic_pswitchonlyjack_semantic, beta_dynamic_pswitchonlyjack_phonemic, float(optimal_fit_pswitchonlydynamicjack), float(random_fit_pswitchonlydynamicjack),\n",
+        "\n",
+        "                   beta_static_phononly_freq, beta_static_phononly_phonemic, float(optimal_fit_phononlystatic), float(random_fit_phononlystatic)\n",
         "\n",
         "                   ]\n",
         "\n",
@@ -1843,7 +1858,7 @@
       "metadata": {
         "id": "lP1sdQE5fR2L"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1866,9 +1881,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ef3e5f36-8128-4e21-9294-3c440e923f47"
+        "outputId": "47cec328-c54f-4ca5-c68c-3e39cbbe4c82"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1880,7 +1895,22 @@
             "SUBJECT 3/171 576\n",
             "SUBJECT 4/171 577\n",
             "SUBJECT 5/171 578\n",
-            "SUBJECT 6/171 579\n",
+            "SUBJECT 6/171 579\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:429: RuntimeWarning: overflow encountered in double_scalars\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:430: RuntimeWarning: overflow encountered in power\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:435: RuntimeWarning: invalid value encountered in double_scalars\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "SUBJECT 7/171 580\n",
             "SUBJECT 8/171 581\n",
             "SUBJECT 9/171 582\n",
@@ -2044,7 +2074,31 @@
             "SUBJECT 167/171 494\n",
             "SUBJECT 168/171 495\n",
             "SUBJECT 169/171 496\n",
-            "SUBJECT 170/171 497\n",
+            "SUBJECT 170/171 497\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:429: RuntimeWarning: overflow encountered in double_scalars\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:430: RuntimeWarning: overflow encountered in power\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:435: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:430: RuntimeWarning: overflow encountered in double_scalars\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:435: RuntimeWarning: divide by zero encountered in log\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:430: RuntimeWarning: overflow encountered in multiply\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:389: RuntimeWarning: overflow encountered in double_scalars\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:390: RuntimeWarning: overflow encountered in power\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:395: RuntimeWarning: invalid value encountered in double_scalars\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:390: RuntimeWarning: overflow encountered in double_scalars\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:395: RuntimeWarning: divide by zero encountered in log\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:390: RuntimeWarning: overflow encountered in multiply\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "SUBJECT 171/171 498\n",
             "Fits Complete.\n",
             "    sid  time        ent   freq       sim      phon  switch\n",
@@ -2061,14 +2115,14 @@
             "26  498  3737    hamster  2.041  0.451015  0.000100       0\n",
             "\n",
             "[6639 rows x 7 columns]\n",
-            "   subject  ...  errors_pswitchonlydynamicjack_random\n",
-            "0       51  ...                            232.669093\n",
-            "1      575  ...                            146.249144\n",
-            "2      576  ...                            398.861302\n",
-            "3      577  ...                            319.089042\n",
-            "4      578  ...                            252.612158\n",
+            "   subject  ...  errors_staticphononly_random\n",
+            "0       51  ...                    232.669093\n",
+            "1      575  ...                    146.249144\n",
+            "2      576  ...                    398.861302\n",
+            "3      577  ...                    319.089042\n",
+            "4      578  ...                    252.612158\n",
             "\n",
-            "[5 rows x 44 columns]\n",
+            "[5 rows x 48 columns]\n",
             "Results saved to '/content/drive/My Drive/IU-Abhilasha-Mike/Fluency/sem-phon/fluency_cogsci2022/'.\n"
           ]
         }
