--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMUw3SIWVgSTQywp3PaWLA/",
+      "authorship_tag": "ABX9TyPY0mM0S+BaWg4wPaUibvCr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dbc3883d-e1da-48f9-cbb6-caa40a187667"
+        "outputId": "0e933119-3bd4-43e2-fad2-28c8114b2a83"
       },
       "outputs": [
         {
@@ -94,7 +94,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8911c4e2-3d03-40ef-913d-2d5b34d31de4"
+        "outputId": "f442b00f-1fbf-439a-e8ad-1fe5a33b8792"
       },
       "execution_count": 2,
       "outputs": [
@@ -103,7 +103,7 @@
           "name": "stdout",
           "text": [
             "Found GPU at: /device:GPU:0\n",
-            "Mon Jan 10 18:18:44 2022       \n",
+            "Fri Jan 14 16:52:00 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 495.46       Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -112,7 +112,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   36C    P0    33W / 250W |    375MiB / 16280MiB |      2%      Default |\n",
+            "| N/A   38C    P0    35W / 250W |    375MiB / 16280MiB |      2%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -204,7 +204,7 @@
         },
         "outputId": "ee975d7a-8362-454d-b3e3-c7f901202a90"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +246,7 @@
         },
         "outputId": "52e40ee3-13b5-4ca9-911a-8c3763c6f75c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
         },
         "outputId": "24cf4fca-6712-46aa-8f7b-c8389372c856"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +337,7 @@
         },
         "outputId": "a8e158ff-390d-463a-fa90-2c83c05efa96"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,7 +468,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# similarity drop"
+        "# similarity drop & troyer"
       ],
       "metadata": {
         "id": "Zx_Vo8TYP7cU"
@@ -477,12 +477,26 @@
     {
       "cell_type": "code",
       "source": [
-        "## obtain similarity drop values\n",
+        "parentfolder = \"/content/drive/My Drive/IU-Abhilasha-Mike/Fluency/sem-phon/fluency_cogsci2022/\"\n",
         "with tf.device('/device:GPU:0'):\n",
         "  precomputed_data = pd.read_csv(parentfolder +\"precomputed_data.csv\", encoding=\"unicode-escape\")\n",
+        "  norms = pd.read_csv(parentfolder +\"troyernorms.csv\", encoding=\"unicode-escape\")"
+      ],
+      "metadata": {
+        "id": "9Fa39hPKfWI-"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## obtain similarity drop and troyer switch values\n",
         "\n",
         "simdrop = []\n",
+        "troyer = []\n",
         "for k, row in precomputed_data.iterrows():\n",
+        "  # simdrop\n",
         "  if (k > 0 and k < (len(precomputed_data)-2)):\n",
         "    if (precomputed_data[\"word2vec_similarity\"][k+1] > precomputed_data[\"word2vec_similarity\"][k]) and (precomputed_data[\"word2vec_similarity\"][k-1] > precomputed_data[\"word2vec_similarity\"][k]):\n",
         "      simdrop.append(1)\n",
@@ -490,8 +504,23 @@
         "      simdrop.append(0)\n",
         "  else:\n",
         "      simdrop.append(0)\n",
+        "  \n",
+        "  ## troyer\n",
+        "  if(k >0  and k < (len(precomputed_data)-2)):\n",
+        "    item1 = precomputed_data[\"response\"][k]\n",
+        "    item2 = precomputed_data[\"response\"][k-1]\n",
+        "    category1 = norms[norms['Animal'] == item1]['Category'].values.tolist()\n",
+        "    category2 = norms[norms['Animal'] == item2]['Category'].values.tolist()\n",
+        "    if len(list(set(category1) & set(category2)))== 0:\n",
+        "        troyer.append(1)\n",
+        "    else:\n",
+        "        troyer.append(0)\n",
+        "  else:\n",
+        "     troyer.append(0) \n",
         "\n",
         "precomputed_data[\"simdrop\"] = simdrop\n",
+        "precomputed_data[\"troyer\"] = troyer\n",
+        "\n",
         "precomputed_data.to_csv(parentfolder + f'precomputed_data.csv', index=False)\n",
         "precomputed_data"
       ],
@@ -501,7 +530,7 @@
           "height": 852
         },
         "id": "YfQRnFs8ONhg",
-        "outputId": "4a62f149-c456-48f5-fa73-06e7ad967b4d"
+        "outputId": "67df1ab3-7c89-4af2-ab7f-d3ee71d6302e"
       },
       "execution_count": 29,
       "outputs": [
@@ -510,7 +539,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-fabd7856-629f-419a-8e52-5e27b45b6fa6\">\n",
+              "  <div id=\"df-c1d7f897-dc01-47db-af70-ec71ef98339b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -546,6 +575,7 @@
               "      <th>norm_orth</th>\n",
               "      <th>word2vec_similarity</th>\n",
               "      <th>simdrop</th>\n",
+              "      <th>troyer</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -567,6 +597,7 @@
               "      <td>-999.000000</td>\n",
               "      <td>-999.000000</td>\n",
               "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -585,6 +616,7 @@
               "      <td>0.000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.469811</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -605,6 +637,7 @@
               "      <td>0.000000</td>\n",
               "      <td>0.297824</td>\n",
               "      <td>1</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -624,6 +657,7 @@
               "      <td>0.250000</td>\n",
               "      <td>0.383209</td>\n",
               "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -643,9 +677,11 @@
               "      <td>0.000000</td>\n",
               "      <td>0.760946</td>\n",
               "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
+              "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -681,6 +717,7 @@
               "      <td>0.222222</td>\n",
               "      <td>0.186143</td>\n",
               "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>32339</th>\n",
@@ -699,6 +736,7 @@
               "      <td>0.000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.172121</td>\n",
+              "      <td>1</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -719,6 +757,7 @@
               "      <td>0.545455</td>\n",
               "      <td>0.345995</td>\n",
               "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>32341</th>\n",
@@ -737,6 +776,7 @@
               "      <td>0.125</td>\n",
               "      <td>0.181818</td>\n",
               "      <td>0.430308</td>\n",
+              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -757,12 +797,13 @@
               "      <td>0.153846</td>\n",
               "      <td>0.037383</td>\n",
               "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>32343 rows × 16 columns</p>\n",
+              "<p>32343 rows × 17 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fabd7856-629f-419a-8e52-5e27b45b6fa6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c1d7f897-dc01-47db-af70-ec71ef98339b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -813,12 +854,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fabd7856-629f-419a-8e52-5e27b45b6fa6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c1d7f897-dc01-47db-af70-ec71ef98339b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fabd7856-629f-419a-8e52-5e27b45b6fa6');\n",
+              "          const element = document.querySelector('#df-c1d7f897-dc01-47db-af70-ec71ef98339b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -840,135 +881,24 @@
               "  "
             ],
             "text/plain": [
-              "       Unnamed: 0 dataset  subject  ...   norm_orth  word2vec_similarity simdrop\n",
-              "0               0     LEA    50001  ... -999.000000          -999.000000       0\n",
-              "1               1     LEA    50001  ...    0.000000             0.469811       0\n",
-              "2               2     LEA    50001  ...    0.000000             0.297824       1\n",
-              "3               3     LEA    50001  ...    0.250000             0.383209       0\n",
-              "4               4     LEA    50001  ...    0.000000             0.760946       0\n",
-              "...           ...     ...      ...  ...         ...                  ...     ...\n",
-              "32338       32338     HJT     1099  ...    0.222222             0.186143       0\n",
-              "32339       32339     HJT     1099  ...    0.000000             0.172121       1\n",
-              "32340       32340     HJT     1099  ...    0.545455             0.345995       0\n",
-              "32341       32341     HJT     1099  ...    0.181818             0.430308       0\n",
-              "32342       32342     HJT     1099  ...    0.153846             0.037383       0\n",
+              "       Unnamed: 0 dataset  subject  ... word2vec_similarity  simdrop troyer\n",
+              "0               0     LEA    50001  ...         -999.000000        0      0\n",
+              "1               1     LEA    50001  ...            0.469811        0      0\n",
+              "2               2     LEA    50001  ...            0.297824        1      1\n",
+              "3               3     LEA    50001  ...            0.383209        0      1\n",
+              "4               4     LEA    50001  ...            0.760946        0      0\n",
+              "...           ...     ...      ...  ...                 ...      ...    ...\n",
+              "32338       32338     HJT     1099  ...            0.186143        0      1\n",
+              "32339       32339     HJT     1099  ...            0.172121        1      1\n",
+              "32340       32340     HJT     1099  ...            0.345995        0      1\n",
+              "32341       32341     HJT     1099  ...            0.430308        0      0\n",
+              "32342       32342     HJT     1099  ...            0.037383        0      0\n",
               "\n",
-              "[32343 rows x 16 columns]"
+              "[32343 rows x 17 columns]"
             ]
           },
           "metadata": {},
           "execution_count": 29
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "vec1 = word2vec[list(vocab[\"vocab_word\"]).index(\"apple\")].reshape((1,word2vec.shape[1]))\n",
-        "vec2 = word2vec[list(vocab[\"vocab_word\"]).index(\"orange\")].reshape((1,word2vec.shape[1]))\n",
-        "float((1 - scipy.spatial.distance.cdist(vec1, vec2, 'cosine'))[0])      "
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "meH-bA54zoGs",
-        "outputId": "3dcb93a2-f98c-43ba-dd5d-e3a9da868e7f"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.39203460108701615"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def cosine_similarity(word1, word2):\n",
-        "  vec1 = word2vec[list(vocab[\"vocab_word\"]).index(word1)].reshape((1,word2vec.shape[1]))\n",
-        "  vec2 = word2vec[list(vocab[\"vocab_word\"]).index(word2)].reshape((1,word2vec.shape[1]))\n",
-        "  return float((1 - scipy.spatial.distance.cdist(vec1, vec2, 'cosine'))[0])      "
-      ],
-      "metadata": {
-        "id": "ykEurQ1NBVc1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "cosine_similarity(\"apple\", \"apple\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "atOFXEEaBiU_",
-        "outputId": "267e5ff8-6a32-4f1e-92f5-1b99a1d14334"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 20
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def find_closest(word):\n",
-        "  sims = [cosine_similarity(word,x) for x in list(vocab.vocab_word)[:1000]]\n",
-        "  y = np.array(sims)\n",
-        "  y_sorted = np.argsort(-y) ## gives sorted indices\n",
-        "  top5_indices = y_sorted[:5]\n",
-        "  w1 = [list(vocab.vocab_word)[i] for i in top5_indices]\n",
-        "  return w1"
-      ],
-      "metadata": {
-        "id": "sZz2-AHO0cCy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "find_closest(\"apple\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2fTzhwMwBqz0",
-        "outputId": "51e3c7b8-28af-4b78-f243-c62901efd728"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['apple', 'pear', 'peach', 'cherries', 'mango']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
         }
       ]
     },
@@ -1858,7 +1788,7 @@
       "metadata": {
         "id": "lP1sdQE5fR2L"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1883,7 +1813,7 @@
         },
         "outputId": "47cec328-c54f-4ca5-c68c-3e39cbbe4c82"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
